[HTTP request] com.googlecode.json-simple:json-simple to parse JSON string